--- a/frontend/styles/dashboard.scss
+++ b/frontend/styles/dashboard.scss
@@ -44,7 +44,9 @@
   align-self: flex-start;
   margin-top: 0 !important;
   margin-left: 0 !important;
-  margin-right: 1rem !important;
+  @media (min-width: vars.$mobilethreshold) {
+    margin-right: 1rem !important;
+  }
 }
 
 .dashboard-left-sidebar {
